# wordle

./: CMakeLists.txt  README.md  main.cpp
include/: Game.h  Guess.h
src/: Game.cpp  Guess.cpp
textfiles/: colorPermutations.txt
